--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
   padding: 0;
   text-align: center;
   outline: 1px solid transparent;
+  backface-visibility: visible;
 }
 
 html {
@@ -19,417 +20,369 @@ html {
 /*   scroll-snap-type: y proximity; */
 }
 
-body {
+
+
+/* ------- HEADER ----------- */
+.animation-container {
   height: 100vh;
-  width: 100%;
-  pointer-events: none;
-/*   background-color: darkblue; */
-/*   background-color: gray; */
-/*   overflow: hidden; */
-}
-
-/* main {
-  transform: translate3d(0, 0, -500px);
-} */
-
-.bg-box-shadow {
-  position: fixed;
-  top: 0;
-  height: 100%;
-  width: 100%;
-/*   box-shadow: inset 300px 300px 500px 50px rgba(255, 255, 255, 1); */
-  box-shadow: inset 00px 00px 500px rgba(255, 255, 255, .2);
-  z-index: -2;
-}
-
-h1, h2 {
-/*   font-family: 'Fjalla One', sans-serif; */
-/*   font-size-adjust: 1.3; */
-  letter-spacing: 3px;
-}
-
-
-.bg-boxes {
-  transition: transform 1s cubic-bezier(.19,1,.22,1) 0.0s;
-  height: 100vh;
-  width: 300vw;
-  position: fixed;
-  top: 0;
-  left: 0;
+  width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-flow: column wrap;
   perspective: 3000px;
-  perspective-origin: 0% 0%;
-  z-index: -3;
+  perspective-origin: 50% 50%;
+  transition: 0.1s;
+  transform: rotate3d(0, 1, 0, -10deg);
 }
 
-.box {
-  height: 18vh;
-  width: 10vw;
-/*   background-color: rgba(0, 100, 255, 0.3); */
-/*   filter: invert(100%); */
-/*   border: 2px solid gray; */
-/*   transform: translate3d(0, 0, 0); */
-/*   position: absolute; */
-}
-
-
-
-
-
-
-
-
-/* --------------------- HEADER --------------------- */
-.name {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 10em;
-  line-height: 4vh;
-  margin: 0;
-  padding-right: 1em;
-/*   color: white; */
-/*   background-color: black; */
-  font-size-adjust: 0.3;
-  pointer-events: auto;
-}
-
-.name-mouseover-obj {
-/*   background-color: red; */
-  border: 1px solid green;
+.dot-container {
   height: 40vh;
-  width: 40vw;
-  position: absolute;
-  top: 0;
-  left: 0;
-/*   transform: rotateZ(20deg); */
-  pointer-events: auto;
-}
-
-
-
-
-
-
-/* ------------------- NAVIGATION ------------------- */
-.navigation-container {
-  position: absolute;
-  top: -1vh;
-  left: 0;
+  width: 40vh;
+/*   border: 1px dashed green; */
+/*   border: 20vh solid transparent; */
   display: flex;
-  flex-flow: column nowrap;
-  justify-content: space-between;
-  height: 30vh;
-/*   width: 100vw; */
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  perspective: 3000px;
+/*   perspective: 800px; */
+  perspective-origin: 50% 50%;
+  transform-style: preserve-3d;
+/*   transform: rotate3d(1, 1, 0, 25deg); */
+/*   animation: ambient-rotation 10s linear infinite; */
+  transition: 5s;
 }
 
-.nav-buttons {
-  height: 6vh;
-  width: 10vw;
-  background-color: transparent;
-  border: none;
-/*   color: white; */
-  pointer-events: auto;
+@keyframes ambient-rotation {
+  0% {transform: rotate3d(0, 0, 1, -1080deg);}
+/*   0% {transform: rotateZ(0deg) rotateY(0deg) rotateX(0deg);} */
+/*   33% {transform: rotateZ(120deg) rotateY(45deg);} */
+/*   66% {transform: rotateZ(240deg) rotateY(0deg) rotateX(45deg);} */
+/*   100% {transform: rotateZ(360deg) rotateY(0deg) rotateX(0deg);} */
 }
 
-.nav-buttons:hover {
-/*   background-color: red; */
-}
-
-.about-me {
-  transform: translate3d(250%, 0, 0);
-}
-
-.p1 {
-  transform: translate3d(0, -200%, 0);
-}
-
-.p2 {
-  transform: translate3d(0, -400%, 0);
-}
-
-.p3 {
-  transform: translate3d(0, -500%, 0);
-}
-
-
-
-
-
-
-
-/* --------------------- ABOUT ME ------------------ */
-.about-me-container {
-  width: 100vw;
-  height: 100vh;
-  transition: 0.5s;
-/*   background-color: rgba(0, 0, 0, 0.5); */
-  position: fixed;
+.square {
+  position: absolute;
   top: 0;
+  left: 0;
+/*   background-color: red; */
+  height: 100%;
+  width: 100%;
+  transition: 2s;
+  /* transform: scaleY(0); */
+  opacity: 0;
+}
+
+.sq1 {
+/*   border: 2px solid rgba(0, 0, 255, 0.7);
+  border-bottom: 7px solid rgba(0, 0, 255, 0.7);
+  border-top: 7px solid rgba(0, 0, 255, 0.7); */
+/*   box-shadow: inset 0 0 10px rgba(0, 0, 255, 0.7),
+    0 0 10px rgba(0, 0, 255, 0.7); */
+/*   transform: translate3d(0%, 0%, 0) scale3d(1, 1, 1); */
+/*   transform: translate3d(0%, -40%, 0) scale3d(1, 0.20, 1); */
+  background-color: rgba(0, 0, 255, 0.3);
+  /* opacity: 1; */
+  transition-delay: 0.3s;
+}
+
+.sq2 {
+/*   border: 2px solid rgba(0, 0, 255, 0.7); */
+/*   box-shadow: inset 0 0 10px rgba(0, 0, 255, 0.7),
+    0 0 10px rgba(0, 0, 255, 0.7); */
+  /* opacity: 1; */
+  background-color: rgba(0, 0, 255, 0.3);
+  transform: translate3d(0%, -45%, 0) scale3d(1, 0.1, 1);
+  transition-delay: 0.6s;
+/*   transform: translate3d(0%, 22%, 0) scale3d(0.75, 0.56, 1); */
+}
+
+.sq3 {
+/*   border: 2px solid rgba(0, 0, 255, 0.5); */
+/*   box-shadow: inset 0 0 10px rgba(0, 0, 255, 0.7),
+    0 0 10px rgba(0, 0, 255, 0.7); */
+  background-color: rgba(0, 0, 255, 0.3);
+  /* opacity: 1; */
+  transform: translate3d(0%, -45%, 0) scale3d(.3, 0.05, 1);
+/*   transform: translate3d(0%, 0%, 0) scale3d(1, 1, 1); */
+}
+
+.sq4 {
+  background-color: rgba(0, 0, 255, 0.3);
+  /* opacity: 1; */
+  transform: translate3d(-42.5%, 5%, 0) scale3d(0.15, 0.9, 1);
+}
+
+.sq5 {
+  background-color: rgba(0, 0, 255, 0.3);
+  /* opacity: 1; */
+  transform: translate3d(-18%, -30%, 0) scale3d(0.2, 0.12, 1);
+}
+
+.sq6 {
+  background-color: rgba(0, 0, 255, 0.3);
+  /* opacity: 1; */
+  transform: translate3d(7%, -30%, 0) scale3d(0.2, 0.12, 1);
+}
+
+.sq7 {
+  background-color: rgba(0, 0, 255, 0.3);
+  /* opacity: 1; */
+  transform: translate3d(32%, -30%, 0) scale3d(0.2, 0.12, 1);
+}
+
+.sq8 {
+  background-color: rgba(0, 0, 255, 0.3);
+  /* opacity: 1; */
+  transform: translate3d(-18%, -5%, 0) scale3d(0.2, 0.12, 1);
+}
+
+.sq9 {
+  background-color: rgba(0, 0, 255, 0.3);
+  /* opacity: 1; */
+  transform: translate3d(7%, -5%, 0) scale3d(0.2, 0.12, 1);
+}
+
+.sq10 {
+  background-color: rgba(0, 0, 255, 0.3);
+  /* opacity: 1; */
+  transform: translate3d(32%, -5%, 0) scale3d(0.2, 0.12, 1);
+}
+
+.sq11 {
+  background-color: rgba(0, 0, 255, 0.3);
+  /* opacity: 1; */
+  transform: translate3d(-18%, 25%, 0) scale3d(0.2, 0.12, 1);
+}
+
+.sq12 {
+  background-color: rgba(0, 0, 255, 0.3);
+  /* opacity: 1; */
+  transform: translate3d(7%, 25%, 0) scale3d(0.2, 0.12, 1);
+}
+
+.sq13 {
+  background-color: rgba(0, 0, 255, 0.3);
+  /* opacity: 1; */
+  transform: translate3d(32%, 25%, 0) scale3d(0.2, 0.12, 1);
+}
+
+svg {
+/*   transform: translate3d(0%, -40%, -500px) rotate3d(1, 0, 0, 90deg); */
+  visibility: hidden;
+}
+
+.dot {
+  position: absolute;
+  height: 5vh;
+  width: 5vh;
+/*   padding: 2vh; */
+/*   background-color: blue; */
+/*   clip-path: circle(10% at 50% 50%); */
+/*   border-radius: 1000px; */
+  border: 1px solid black;
+  transition: 0.5s;
+/*   transition-timing-function: ease-in; */
+  transform: translate3d(0%, 0%, 0);
   perspective: 3000px;
   perspective-origin: 50% 50%;
   transform-style: preserve-3d;
-  color: white;
-  display: flex;
-  flex-flow: column nowrap;
-  align-items: center;
-/*   justify-content: space-around; */
-/*   transform: translate3d(-75%, -75%, 0); */
-/*   transform: translate3d(-5%, -5%, 0); */
-/*   pointer-events: auto; */
 }
 
-.about-me-content {
+.dot-background {
   position: absolute;
-  height: 30vh;
-  width: 60vw;
-  top: 25vh;
-  background-color: black;
-/*   border: 2px solid white; */
-  box-shadow: inset 0px 0px 5px rgba(255, 255, 255, 1);
-  text-align: left;
-  grid-area: content;
-  font-size-adjust: 0.6;
-  line-height: 190%;
-/*   padding: 4em; */
-  padding-left: 10vw;
-  padding-right: 10vw;
-  padding-top: 3em;
-  padding-bottom: 3em;
-  z-index: 1;
-  transition: 0.9s;
-  transform: translate3d(200%, -200%, 0);
-/*   clip-path: polygon(0 5%, 0% 0%, 100% 0%, 100% 100%, 0 100%, 0 95%, 95% 95%, 95% 5%); */
+/*   top: 0; */
+/*   left: 0; */
+  background-color: blue;
+  height: 100%;
+  width: 100%;
+/*   transform: translate3d(0, 0, -100px); */
+  clip-path: circle(10% at 50% 50%);
 }
 
-
-
-
-
-
-
-
-/*------------------- PROJECTS ---------------------*/
-.project-containers {
-/*   position: fixed; */
-  position: relative;
-  top: 0;
-  left: 0;
-  transition: 0.5s;
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  justify-content: space-evenly;
-  flex-flow: column nowrap;
-  align-items: center;
-/*   transform: translate3d(70%, 25%, 0); */
-/*   pointer-events: auto; */
-}
-
-.project-one-container, .project-two-container, .project-three-container {
-  position: absolute;
-  background-color: black;
-/*   background-image: linear-gradient(to right, transparent, black, 100%, transparent); */
-  color: white;
-  height: 50vh;
-  width: 60vw;
-  transition: 0.5s;
-/*   opacity: 0; */
-  transform: translate3d(200%, 200%, 0);
-}
-
-
-
-.project-one, .project-two, .project-three {
-
-}
-
-.project-one-container {
-/*   transform: translate3d(0%, -195%, 0); */
-/*   transform: translate3d(0%, 245%, 0); */
-}
-
-.project-one {
-
-}
-
-.project-two-container {
-/*   transform: translate3d(15%, 0%, 0); */
-/*   transform: translate3d(0%, 130%, 0); */
-}
-
-.project-two {
-
-}
-
-.project-three-container {
-/*   transform: translate3d(0%, 100%, 0); */
-/*   transform: translate3d(0%, 15%, 0); */
-}
-
-.project-three {
-
-}
-
-
-
-
-
-.project-heading { 
-
-}
-
-.project-title {
-
-}
-
-.project-details {
-
-}
-
-.project-description {
-
-}
-
-.project-buttons-container {
-  grid-area: buttons;
-  height: 15vh;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: space-evenly;
-/*   align-items: center; */
-/*   margin-top: 10vh; */
-/*   width: 90%; */
-  margin-left: -0.5vw;
-  position: relative;
-}
-
-.project-buttons {
-  border-radius: 15px;
-  border: unset;
-  color: rgba(0, 0, 0, 0.6);
-  background-color: transparent;
-  cursor: pointer;
-  text-align: left;
-  font-size-adjust: 0.5;
-  font-weight: bold;
-/*   font-family: 'Fjalla One', sans-serif; */
-  height: 5vh;
-  width: max-content;
-  transition: 0.2s;
-}
-
-.project-buttons:before {
+.dot:before {
   content: '';
-  height: 1.3em;
-  width: 2vw;
-  left: 0;
-  background-color: rgba(33, 150, 243, 1);
   position: absolute;
-  transform: translate3d(-200%, 0, 0);
-  transition: 0.3s;
-  transition-timing-function: cubic-bezier(.11, .87, .3, .86);
-  clip-path: polygon(47% 5%, 5% 5%, 5% 0%, 95% 0%, 95% 5%, 53% 5%, 53% 95%, 95% 95%, 95% 100%, 5% 100%, 5% 95%, 47% 95%);
-  opacity: 0;
-/*   clip-path: polygon(100% 0, 100% 5%, 5% 5%, 5% 95%, 100% 95%, 100% 100%, 0 100%, 0 0); */
+  top: 2.5vh;
+  left: 40%;
+  background-color: rgba(0, 0, 255, 0.7);
+  height: 1000px;
+  width: 20%;
+  transform: translate3d(0%, -50%, -500px) rotate3d(1, 0, 0, 90deg);
 }
 
-.project-buttons:after {
+.dot:after {
   content: '';
-  height: 1.3em;
-  width: 2vw;
-  right: 70%;
-  background-color: rgba(33, 150, 243, 1);
   position: absolute;
-  transform: translate3d(200%, 0, 0);
-  transition: 0.3s;
-  transition-timing-function: cubic-bezier(.11, .87, .3, .86);
-  clip-path: polygon(47% 5%, 5% 5%, 5% 0%, 95% 0%, 95% 5%, 53% 5%, 53% 95%, 95% 95%, 95% 100%, 5% 100%, 5% 95%, 47% 95%);
-  opacity: 0;
-/*   clip-path: polygon(0 5%, 5% 0, 100% 0, 100% 100%, 0 100%, 0 95%, 95% 95%, 95% 5%); */
+  top: 2.5vh;
+  left: 40%;
+  background-color: rgba(0, 0, 255, 0.7);
+  height: 1000px;
+  width: 20%;
+  transform: translate3d(0%, -50%, -500px) rotateY(90deg) rotateZ(90deg);
 }
 
-.project-buttons:hover {
-  color: black;
-  position: relative;
-/*   text-decoration: underline overline rgba(33, 150, 243, 1); */
+@keyframes in-and-out {
+  0% {transform: translate3d(0, 0, 0px);}
+  50% {transform: translate3d(0, 0, -1000px);}
+  100% {transform: translate3d(0, 0, 0px);}
 }
 
-.project-buttons:hover.project-buttons:before {
-  left: unset;
-  right: -10%;
-  transform: translate3d(0, 0, 0);
-  clip-path: polygon(0 5%, 5% 0, 100% 0, 100% 100%, 0 100%, 0 95%, 95% 95%, 95% 5%);
-  opacity: 1;
+.d1 {
+/*   transform: translate3d(-400%, -400%, 0px); */
+/*   animation: in-and-out 5s linear infinite; */
+  transition-delay: 0.1s;
 }
 
-.project-buttons:hover.project-buttons:after {
-  right: unset;
-  left: 10%;
-  transform: translate3d(-80%, 0, 0);
-  clip-path: polygon(100% 0, 100% 5%, 5% 5%, 5% 95%, 100% 95%, 100% 100%, 0 100%, 0 0);
-  opacity: 1;
-}
-
-
-
-
-
-
-
-/* --------------- FOOTER -------------------- */
-.contact-section {
-  position: fixed;
-  top: 300vh;
-  transition: 0.5s;
-  height: 100vh;
-  width: 100vw;
-  display: grid;
-  grid-template-areas: "contact info";
-  align-items: flex-end;
-  justify-content: space-between;
-}
-
-.contact-me {
-  transition: 0.5s;
-  grid-area: contact;
-  background-color: black;
-  border: 2px solid white;
-  height: 60vh;
-  width: 50vw;
-}
-
-.information {
-  transition: 0.5s;
-  grid-area: info;
-  background-color: black;
-  border: 2px solid white;
-  height: 50vh;
-  width: 40vw;
-}
-
-
-
-i {
-  font-size-adjust: 2;
-  padding: 2vh;
-  border-radius: 15px;
-  opacity: 0.5;
-}
+.d2 {
+/*   transform: translate3d(400%, -400%, 0px); */
+/*   animation: in-and-out 5s ease 1s infinite; */
+  transition-delay: 0.2s;
   
-i:hover {
-  opacity: 1;
+}
+
+.d3 {
+/*   transform: translate3d(400%, 400%, 0px); */
+  transition-delay: 0.3s;
+
+}
+
+.d4 {
+/*   transform: translate3d(-400%, 400%, 0px); */
+/*   animation: in-and-out 5s linear 2s infinite; */
+  transition-delay: 0.4s;
+}
+
+.d5 {
+/*   transform: translate3d(0%, -360%, 0px); */
+/*   animation: in-and-out 5s linear 3s infinite; */
+  transition-delay: 0.5s;
+}
+
+.d6 {
+/*   transform: translate3d(-140%, -240%, 0px); */
+  transition-delay: 0.6s;
+}
+
+.d7 {
+/*   transform: translate3d(60%, -240%, 0px); */
+  transition-delay: 0.7s;
+
+}
+
+.d8 {
+/*   transform: translate3d(260%, -240%, 0px); */
+  transition-delay: 0.8s;
+  
+}
+
+.d9 {
+/*   transform: translate3d(-140%, -40%, 0px); */
+  transition-delay: 0.9s;
+  
+}
+
+.d10 {
+/*   transform: translate3d(60%, -40%, 0px); */
+  transition-delay: 1s;
+  
+}
+
+.d11 {
+/*   transform: translate3d(260%, -40%, 0px); */
+  transition-delay: 1.1s;
+  
+}
+
+.d12 {
+/*   transform: translate3d(-140%, 200%, 0px); */
+  transition-delay: 1.2s;
+  
+}
+
+.d13 {
+/*   transform: translate3d(60%, 200%, 0px); */
+  /* transition-delay: 1.3s; */
+  transition-delay: 1.2s;
+  
+}
+
+.d14 {
+/*   transform: translate3d(260%, 200%, 0px); */
+  /* transition-delay: 1.4s; */
+  transition-delay: 1.2s;
+  
+}
+
+.d15 {
+/*   transform: translate3d(140%, -20%, 0px); */
+  /* transition-delay: 1.5s; */
+  transition-delay: 1.2s;
+  
+}
+
+.d16 {
+/*   transform: translate3d(140%, 20%, 0px); */
+  /* transition-delay: 1.6s; */
+  transition-delay: 1.2s;
+
+  
+}
+
+.d17 {
+/*   transform: translate3d(280%, -370%, 0px); */
+  /* transition-delay: 1.7s; */
+  transition-delay: 1.2s;
+
+  
+}
+
+.d18 {
+/*   transform: translate3d(320%, -370%, 0px); */
+  /* transition-delay: 1.8s; */
+  transition-delay: 1.2s;
+
+  
+}
+
+.d19 {
+/*   transform: translate3d(360%, -370%, 0px); */
+  /* transition-delay: 1.9s; */
+  transition-delay: 1.2s;
+
+  
+}
+
+.d20 {
+/*   transform: translate3d(-20%, 20%, 0px); */
+  /* transition-delay: 2s; */
+  transition-delay: 1.2s;
+
+  
+}
+
+
+.header {
+  height: 20vh;
+  width: 100vw;
 }
 
 
 
 
+/* ---------- PROJECTS ------------ */
 
-/* ------------------ TECH SVGS ---------------------- */
 
+
+
+
+/* --------- ABOUT ME ----------- */
+
+
+
+
+
+/* ---------- CONTACT ME ----------- */
 
 
 
